# skills

./: README.md  cron_fix_test.md
dolphindb-ops/: .gitignore  SKILL.md  mcp-config.yaml.example  pyproject.toml
dolphindb-ops/mcp_server/: __init__.py  auth.py  cluster_resolver.py  config.py  ddb_pool.py  discovery.py  script_registry.py  server.py  skill_loader.py  ssh_pool.py
dolphindb-ops/mcp_server/tools/: __init__.py  api_tool.py  ddb_tool.py  shell_tool.py  skill_tool.py
dolphindb-ops/references/: architecture-overview.md  async-replication.md  backup-restore.md  core-dump-analysis.md  crash.md  disk-full.md  disk-recovery.md  environment-migration.md  execution-failure-metadata.md  execution-failure-query.md  execution-failure-streaming.md  execution-failure-system.md  file-cleanup.md  job-issues.md  license-update.md  metadata-repair.md  node-down.md  oom.md  partition-version-inconsistency.md  platform-api.md  plugin-issues.md  redo-log-config.md  security-guide.md  slow-query.md  startup-failure.md  stream-delay.md  system-hang.md  unexpected-return.md
dolphindb-ops/scripts/dolphindb/: backup.dos  job.dos  partition.dos  replication.dos  resource.dos  security.dos  session.dos  streaming.dos  transaction.dos
dolphindb-ops/scripts/shell/: batch_job.sh  core_dump.sh  log.sh  process.sh  system.sh  trace.sh
dolphindb-ops/test/: audit_actions.py  report.py  test_actions.py  test_completions.py  test_ddb_definitions.py  test_http_auth.py
dolphindb-ops/test/e2e/: agent_client.py  failure_analyzer.py  verifyCases.py
dolphindb-ops/test/e2e/cases/: Test.py  (+31 more)
(+84 files in other folders)
